--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Pricing Component</title>
 
   <!-- STylessheets -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -11,6 +11,60 @@
 </head>
 <body>
 
+
+  <main class="main-content">
+    <div class="page container">
+      <h1 class="page-title">Our Pricing</h1>
+      <div style="margin-bottom:64px;">Switch</div>
+
+      <section class="pricing">
+        <h2 class="visually-hidden">Pricing</h2>
+        <div class="pricing-inner">
+          <section class="pricing-plan">
+            <h3 class="pricing-plan-title">Basic</h3>
+            <div class="pricing-plan-price">
+              <span class="pricing-plan-currency">$</span>
+              19.99
+            </div>
+      <ul class="pricing-plan-features">
+      <li class="pricing-plan-feature">500 GB Storage</li>
+       <li class="pricing-plan-feature">2 Users Allowed</li>
+        <li class="pricing-plan-feature">Send up to 3 GB</li>
+         </ul>
+             <a href="#" class="button button-block button-primary">Learn More</a>
+          </section>
+
+          <section class="pricing-plan pricing-plan-best">
+            <h3 class="pricing-plan-title">Professional</h3>
+            <div class="pricing-plan-price">
+              <span class="pricing-plan-currency">$</span>
+              24.99
+            </div>
+      <ul class="pricing-plan-features">
+      <li class="pricing-plan-feature">1 TB Storage</li>
+       <li class="pricing-plan-feature">5 Users Allowed</li>
+        <li class="pricing-plan-feature">Send up to 10 GB</li>
+         </ul>
+             <a href="#" class="button button-block button-white">Learn More</a>
+
+            </section>
+          <section class="pricing-plan">
+            <h3 class="pricing-plan-title">Master</h3>
+            <div class="pricing-plan-price">
+              <span class="pricing-plan-currency">$</span>
+              19.99
+            </div>
+      <ul class="pricing-plan-features">
+      <li class="pricing-plan-feature">2 TB Storage</li>
+       <li class="pricing-plan-feature">10 Users Allowed</li>
+        <li class="pricing-plan-feature">Send up to 20 GB</li>
+         </ul>
+             <a href="#" class="button button-block button-primary">Learn More</a>
+          </section>
+        </div>
+      </section>
+    </div>
+  </main>
 
   <script src="js/main.js"></script>
 </body>
